--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@thumbmarkjs/thumbmarkjs": "^0.14.8",
     "mongodb": "^6.8.0",
     "next": "14.2.4",
+    "node-mailjet": "^6.0.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "zod": "^3.23.8"
