--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@thumbmarkjs/thumbmarkjs": "^0.14.8",
+    "@vercel/speed-insights": "^1.0.12",
     "mongodb": "^6.8.0",
     "next": "14.2.4",
     "node-mailjet": "^6.0.5",
